Add v0.3.5 release notes to release history
Document all changes since v0.3.4: for-comprehension arity 12,
VTask API refinement, Maybe.toEither, JUnit 6 upgrade, and the
comprehensive documentation restructure (quickstart, cheat sheet,
stack archetypes, migration cookbook, compiler error guide, railway
diagrams, effects-optics capstone).